# cpp_template

./: CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt  buried_example.cpp  example.cpp
include/: include.h
scripts/: build.py  pack.py  test.py
src/: CMakeLists.txt  demo.cpp
tests/: CMakeLists.txt  test.cpp
